Kernel running with paging enabled
Signed-off-by: Ilias Karimalis <iliaskarimalis@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,15 +35,15 @@ target_link_options(${PROJECT_NAME}.elf PRIVATE
 
 # Optional: Custom command to run in QEMU
 add_custom_target(run
-        COMMAND qemu-system-riscv64 -M virt -cpu rv64 -smp 2 -m 128M -nographic -serial mon:stdio -bios none -kernel ${PROJECT_NAME}.elf
+        COMMAND  ${CMAKE_SOURCE_DIR}/scripts/qemu.py --kernel-elf ${PROJECT_NAME}.elf
         DEPENDS ${PROJECT_NAME}.elf
         COMMENT "Running in QEMU..."
 )
 
-# Optional: Custom command to run GDB in QEMU
-add_custom_target(gdb
-        COMMAND qemu-system-riscv64 -M virt -cpu rv64 -smp 2 -m 128M -nographic -serial mon:stdio -bios none -kernel ${PROJECT_NAME}.elf -s -S
-        COMMAND gdb-multiarch -ex "target remote :1234" -ex "set architecture riscv:rv64" -ex "set disassembly-flavor intel" ${PROJECT_NAME}.elf
-        DEPENDS ${PROJECT_NAME}.elf
-        COMMENT "Running in QEMU with GDB..."
-)
+# # Optional: Custom command to run GDB in QEMU
+# add_custom_target(gdb
+#         COMMAND qemu-system-riscv64 -M virt -cpu rv64 -smp 2 -m 128M -nographic -serial mon:stdio -bios none -kernel ${PROJECT_NAME}.elf -s -S
+#         COMMAND gdb-multiarch -ex "target remote :1234" -ex "set architecture riscv:rv64" -ex "set disassembly-flavor intel" ${PROJECT_NAME}.elf
+#         DEPENDS ${PROJECT_NAME}.elf
+#         COMMENT "Running in QEMU with GDB..."
+# )
